<resources>
    <string name="app_name">PETinder</string>
    <string name="app_title">PETinder</string>
    <string name="image_content_description">contentDescription</string>

    <!--Common-->
    <string name="next">Next</string>

    <!--Facebook API-->
    <string name="facebook_app_id">565591531735119</string>
    <string name="facebook_client_token">720df538d509fb3022266f15af2ebff6</string>

    <!--Welcome-->
    <string name="lets_do_it">Let\'s Do It</string>
    <string name="description_title1">Find Patners\nAnytime, Anywhere</string>
    <string name="description_content1">No one is happy when lonely, and neither should yours pets</string>
    <string name="description_title2">Make an Appointment\nEasily and Quickly</string>
    <string name="description_content2">No one is happy when lonely, and neither should yours pets</string>
    <string name="description_title3">Yours Pet needs\na Relationship</string>
    <string name="description_content3">No one is happy when lonely, and neither should yours pets</string>

    <!--Check In-->
    <string name="login">Log In</string>
    <string name="email">Email@gmail.com</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_with">Log in with</string>
    <string name="create_account">Create account</string>
    <string name="signup">Sign Up</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="have_account_login">Have an account? Log In</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp_verify_content">We will send you an One Time Password on this mobile number</string>
    <string name="code_nation">+84</string>
    <string name="phone_number">Phone number</string>
    <string name="error_message">lỗi rồi nha mạy</string>
    <string name="send_opt_code">Send OPT Code</string>
    <string name="choose_national_code">Lựa chọn mã quốc gia</string>
</resources>