<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.leaquan.petinder.ui.custom_view.TextViewPET
            android:id="@+id/tv_title"
            android:text="@string/create_account"
            android:textSize="@dimen/_24sp"
            android:gravity="center"
            android:layout_width="@dimen/match_constraint"
            android:layout_marginTop="@dimen/_40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/TextViewPET.SubTitle.Black"/>

        <com.leaquan.petinder.ui.custom_view.EdittextPET
            android:id="@+id/edt_email"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/_30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            style="@style/EdittextPET.Default"/>

        <com.leaquan.petinder.ui.custom_view.TextViewPET
            android:id="@+id/tv_err_msg_email"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:textColor="@color/red_5e"
            android:textSize="@dimen/_12sp"
            android:visibility="gone"
            android:text="@string/error_message"
            app:layout_constraintStart_toStartOf="@id/edt_email"
            app:layout_constraintEnd_toEndOf="@id/edt_email"
            app:layout_constraintTop_toBottomOf="@id/edt_email"/>

        <com.leaquan.petinder.ui.custom_view.EdittextPET
            android:id="@+id/edt_password"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_err_msg_email"
            style="@style/EdittextPET.Default"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_show_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraint"
            android:focusable="false"
            android:padding="@dimen/_4dp"
            android:layout_marginEnd="@dimen/_12dp"
            android:src="@drawable/ic_eyes_hide"
            app:layout_constraintTop_toTopOf="@id/edt_password"
            app:layout_constraintEnd_toEndOf="@id/edt_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_password"/>

        <com.leaquan.petinder.ui.custom_view.TextViewPET
            android:id="@+id/tv_err_msg_password"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:textColor="@color/red_5e"
            android:text="@string/error_message"
            android:visibility="gone"
            android:textSize="@dimen/_12sp"
            app:layout_constraintStart_toStartOf="@id/edt_password"
            app:layout_constraintEnd_toEndOf="@id/edt_password"
            app:layout_constraintTop_toBottomOf="@id/edt_password"/>

        <com.leaquan.petinder.ui.custom_view.EdittextPET
            android:id="@+id/edt_confirm_password"
            android:hint="@string/confirm_password"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_err_msg_password"
            style="@style/EdittextPET.Default"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_show_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/match_constraint"
            android:focusable="false"
            android:padding="@dimen/_4dp"
            android:layout_marginEnd="@dimen/_12dp"
            android:src="@drawable/ic_eyes_hide"
            app:layout_constraintTop_toTopOf="@id/edt_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/edt_confirm_password"
            app:layout_constraintBottom_toBottomOf="@id/edt_confirm_password"/>

        <com.leaquan.petinder.ui.custom_view.TextViewPET
            android:id="@+id/tv_err_msg_confirm_password"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:textColor="@color/red_5e"
            android:text="@string/error_message"
            android:visibility="gone"
            android:textSize="@dimen/_12sp"
            app:layout_constraintStart_toStartOf="@id/edt_confirm_password"
            app:layout_constraintEnd_toEndOf="@id/edt_confirm_password"
            app:layout_constraintTop_toBottomOf="@id/edt_confirm_password"/>

        <com.leaquan.petinder.ui.custom_view.ButtonPET
            android:id="@+id/btn_signup"
            android:text="@string/signup"
            android:layout_marginTop="@dimen/_30dp"
            android:paddingBottom="@dimen/_4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_err_msg_confirm_password"
            style="@style/ButtonPET.Gradient"/>

        <include
            android:id="@+id/layout_social"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            layout="@layout/layout_social_button"/>

        <com.leaquan.petinder.ui.custom_view.TextViewPET
            android:id="@+id/tv_have_account"
            style="@style/TextViewPET"
            android:layout_width="@dimen/match_constraint"
            android:gravity="center"
            android:textSize="@dimen/_18sp"
            android:layout_marginBottom="@dimen/_30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_social"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
